--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -74,3 +74,17 @@ li>span{
 .item ul {
     margin-top: 0px;
 }
+
+.download-btn {
+    display: inline-block;
+    margin-top: 1em;
+    padding: 0.6em 1.2em;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: 600;
+    transition: background-color 0.2s;
+}
+.download-btn:hover {
+    background-color: #555;
+}
